<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="oneStopViewModel"
            type="com.example.onestopgrocery.viewmodels.OneStopViewModel" />

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".views.ProductDetailFragment">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:id="@+id/shipDetailsHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/shipDetailsHeaderTxt"
                android:textSize="24sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="16dp" />

            <EditText
                android:id="@+id/editTextTextPersonName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/nameHintTxt"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/editTextAddLineOne"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addLineOneTxt"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/editTextAddLineTwo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/addLineTwoTxt"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/editTextCity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/cityText"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <TextView
                android:id="@+id/textViewProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/provinceTxt" />

            <Spinner
                android:id="@+id/spinnerProvince"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/spinnerProvinceText" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <EditText
                android:id="@+id/editTextPostalCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/postalCodeTxt"
                android:inputType="textPersonName" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="8dp" />

            <Button
                android:id="@+id/reviewOrderButton"
                android:onClick="buttonClick"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/reviewOrderButtonTxt" />


        </LinearLayout>

    </ScrollView>
</layout>