<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/nav_graph"
    app:startDestination="@id/productCatalogFragment">

    <fragment
        android:id="@+id/productCatalogFragment"
        android:name="com.example.onestopgrocery.views.ProductCatalogFragment"
        android:label="@string/fragmentProductHeader"
        tools:layout="@layout/fragment_product">
        <action
            android:id="@+id/action_productCatalogFragment_to_productDetailFragment"
            app:destination="@id/productDetailFragment"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_left"
            app:popEnterAnim="@anim/slide_in_left"
            app:popExitAnim="@anim/slide_out_right" />
        <action
            android:id="@+id/action_productCatalogFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
        <action
            android:id="@+id/action_productCatalogFragment_to_userProfileActivity"
            app:destination="@id/userProfileActivity"
            app:enterAnim="@anim/slide_in_right"
            app:exitAnim="@anim/slide_out_right" />
    </fragment>
    <fragment
        android:id="@+id/productDetailFragment"
        android:name="com.example.onestopgrocery.views.ProductDetailFragment"
        android:label="@string/fragmentProductDetailHeader"
        tools:layout="@layout/fragment_product_detail">
        <action
            android:id="@+id/action_productDetailFragment_to_cartFragment"
            app:destination="@id/cartFragment" />
    </fragment>
    <fragment
        android:id="@+id/cartFragment"
        android:name="com.example.onestopgrocery.views.CartFragment"
        android:label="@string/fragmentCartHeader"
        tools:layout="@layout/fragment_cart">
        <action
            android:id="@+id/action_cartFragment_to_orderFragment"
            app:destination="@id/orderFragment"
            app:popUpTo="@id/productCatalogFragment" />
    </fragment>
    <fragment
        android:id="@+id/orderFragment"
        android:name="com.example.onestopgrocery.views.OrderFragment"
        android:label="@string/fragmentOrderHeader"
        tools:layout="@layout/fragment_order">
        <action
            android:id="@+id/action_orderFragment_to_productCatalogFragment"
            app:destination="@id/productCatalogFragment" />
    </fragment>
    <activity
        android:id="@+id/userProfileActivity"
        android:name="com.example.onestopgrocery.UserProfileActivity"
        android:label="activity_user_profile"
        tools:layout="@layout/activity_user_profile" />
</navigation>